<?xml version="1.0"?>
<package format="2">
  <name>twist_calculator</name>
  <version>0.0.0</version>
  <description>The twist_calculator package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>quaternion_operation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>quaternion_operation</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>quaternion_operation</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
